--- a/style/style.css
+++ b/style/style.css
@@ -230,6 +230,49 @@ input[type="file"]::file-selector-button:hover {
   font-weight: 600;
 }
 
+/* custom radio button */
+
+.custom-radio-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.custom-radio-option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+  padding: 6px 12px; 
+  background-color: #fff;
+  border: 2px solid #ccc;
+  border-radius: 0;
+  cursor: pointer;
+  transition: border 0.3s, background 0.3s;
+  font-size: 0.9rem;
+}
+
+.custom-radio-button {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  border: 1.5px solid #999;
+  background-color: #fff; 
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.custom-radio-option input[type="radio"] {
+  display: none;
+}
+
+.custom-radio-option input[type="radio"]:checked + .custom-radio-button {
+  background-color: #bc6c25;
+  border: 1.5px solid #bc6c25;
+}
+
+.custom-radio-option input[type="radio"]:checked + .custom-radio-button::after {
+  display: none;
+}
+
 /* MOBILE */
 
 @media (max-width: 600px) {
